# nolex

./: .gitmodules  Cargo.toml  README.md  build.rs
src/: data.rs  language.rs  main.rs  spec.rs
src/editor/: layout.rs  mod.rs  widget.rs
src/languages/: json.rs  mod.rs
src/nolex/: mod.rs
