[package]
name = "nolex"
version = "0.1.0"
authors = ["Minghao Liu <molikto@gmail.com>"]
edition = "2018"

[dependencies]
iced = "0.1.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
async-std = "1.0"
directories = "2.0"

[target.'cfg(target_arch = "wasm32")'.dependencies]
web-sys = { version = "0.3", features = ["Window", "Storage"] }
wasm-timer = "0.2"

